--- a/src/components/Header/index.sass
+++ b/src/components/Header/index.sass
@@ -41,5 +41,3 @@ header.header
     a
       @extend %button-cta
       @extend %button-larger
-    +mobile
-      display: none
